# davinci-resolve-extension-builder

./: .gitignore  BACKUP_PROCESS_LOG.md  CONTRIBUTING.md  DEPENDENCY_FIX_README.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_COMPLETION.md  EXTENSION_COMPLETE.md  FIXING_DEPENDENCIES.md  HOW_TO_ACCESS_CONSOLE.md  LAUNCH_GUIDE.md  LICENSE  PLAN.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SUCCESS_WORKING.md  generate-resolve-addon.ps1  generate-resolve-addon.sh  resolve_ai_assistant.py  setup-extension.ps1  test-setup.ps1  test-setup.sh
_archive/resolve-copilot-extension/: README.md  package-lock.json
resolve-ai-assistant/: .env.example  .gitignore  ARCHITECTURE.md  CHEAT_SHEET.md  COPILOT_INTEGRATION.md  CORRECT_ARCHITECTURE.md  GITHUB_CLI_IMPLEMENTATION.md  GITHUB_CLI_QUICKSTART.md  GITHUB_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ITERATION_WORKFLOW.md  PHASE1_COMPLETE.md  POWERSHELL_STATUS.md  PROJECT_INSTRUCTIONS.md  QUICKSTART.md  QUICK_LAUNCH.md  QUICK_START.md  README.md  RESOLUTION_SUMMARY.md  TEST_GUIDE.md  debug_launch.py  launch.bat  launch_with_poetry.py  pyproject.toml  setup.ps1  setup_resolve_python.py  simple_launch.py  test_github_integration.py
resolve-ai-assistant/examples/: basic_fusion.py  github_resolve_workflows.py  lower_third.py  timeline_ops.py
resolve-ai-assistant/src/resolve_ai/: __init__.py  ai_tools.py  assistant.py  cli.py  comfyui_client.py  console_ui.py  controller.py  copilot_cli.py  fusion_tools.py  task_router.py  vscode_bridge.py
resolve-copilot-extension/: package.json
(+6 files in other folders)
